Optimizar carga mobile

--- a/index.html
+++ b/index.html
@@ -38,15 +38,10 @@
     <link rel="preconnect" href="https://www.clarity.ms">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-
-    <link rel="preload" href="images/logo/logo-64x64.png" as="image">
 
     <title>El Oso</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
     <style>
         :root {
             --color-black: #000000;
@@ -2599,14 +2594,20 @@
         </div>
         <div class="portal-container">
             <div class="portal-logo">
-                <img src="images/logo/logo-120x120.png" alt="El Oso Logo">
+                <img src="images/logo/logo-180x180.png" alt="El Oso Logo">
             </div>
             <div class="portal-content">
-                <h1><strong class="portal-strong">ALTO AHÍ, FORASTERO...</strong></h1>
-                <p>Llegaste al refugio de El Oso. Detrás de este umbral solo hay lúpulo indomable, maltas oscuras y cervezas que muerden. Si tienes la garganta seca y ya soplaste más de 18 velitas, adelante.</p>
+                <h1><strong class="portal-strong">¿BUSCÁS EL REFUGIO?</strong></h1>
+                <p>Estás por entrar al territorio de El Oso.
+                <br/>
+                <br/>
+                Acá no hay procesos industriales ni conservantes; solo micro-lotes de cerveza viva, recetas originales y carbonatación natural.
+                <br/>
+                <br/>
+                Si tenés la garganta seca, valorás lo auténtico y ya soplaste más de 18 velitas, sos bienvenido al refugio.</p>
             </div>
             <div class="portal-actions">
-                <button class="portal-btn portal-btn-primary" id="portalConfirmBtn">ENTRAR AL REFUGIO <br><small>(Soy mayor de 18 años)</small></button>
+                <button class="portal-btn portal-btn-primary" id="portalConfirmBtn">ENTRAR AL REFUGIO</button>
                 <button class="portal-btn portal-btn-secondary" id="portalDenyBtn">VOLVER A LA MANADA</button>
             </div>
         </div>
@@ -3287,9 +3288,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <script>
         class ProductSystem {
             constructor() {
