--- a/index.html
+++ b/index.html
@@ -2594,7 +2594,7 @@
         </div>
         <div class="portal-container">
             <div class="portal-logo">
-                <img src="images/logo/logo-180x180.png" alt="El Oso Logo">
+                <img src="images/logo/logo-180x180.png" alt="El Oso Logo" width="180" height="180">
             </div>
             <div class="portal-content">
                 <h1><strong class="portal-strong">¿BUSCÁS EL REFUGIO?</strong></h1>
@@ -2616,7 +2616,7 @@
     <aside id="main-sidebar" class="main-sidebar sidebar-active">
         <div class="main-sidebar--logo" aria-label="El Oso - Inicio">
             <a href="#">
-                <img src="images/logo/logo-64x64.png" alt="mapaches">
+                <img src="images/logo/logo-64x64.png" alt="El Oso Logo" width="64" height="64">
             </a>
         </div>
         <nav class="main-sidebar--nav">
@@ -2638,7 +2638,7 @@
                     <h1>"Es curioso cómo a veces uno simplemente encuentra cosas" <span>- Ted Mosby</span></h1>
                 </div>
             </form>
-            <img class="bg" src="images/banners/hero.jpg" alt="strange mapaches">
+            <img class="bg" src="images/banners/hero.jpg" alt="El Oso - Hero Banner" width="1920" height="1080">
         </section>
 
         <div class="shipping-banner">
@@ -2956,7 +2956,7 @@
                                         </div>
                                         <div class="card-somos--right">
                                             <figure>
-                                                <img src="images/banners/nosotros.jpg?v=15" alt="Fábrica Strange Brewing">
+                                                <img src="images/banners/nosotros.jpg?v=15" loading="lazy" alt="Nosotros" width="600" height="400">
                                             </figure>
                                         </div>
                                     </article>
@@ -3584,7 +3584,7 @@
                 
                 this.modalContent.innerHTML = `
                     <div class="product-modal-image">
-                        <img src="${product.image}" alt="${product.name}" loading="lazy">
+                        <img src="${product.image}" alt="${product.name}" loading="lazy" width="400" height="400">
                     </div>
                     <div class="product-modal-info">
                         <h2 class="product-modal-title">${product.name.split(' - ')[0]}</h2>
@@ -3793,7 +3793,7 @@
 
                 div.innerHTML = `
                     <figure class="shop-article--image">
-                        <img src="${product.image}" alt="${product.name}" loading="lazy" class="product-image" data-id="${product.id}">
+                        <img src="${product.image}" alt="${product.name}" loading="lazy" width="300" height="400" class="product-image" data-id="${product.id}">
                     </figure>
                     <div class="shop-article--data">
                         <div class="shop-article--head">
