Cambios en la sección ¿Quiénes Somos?

--- a/index.html
+++ b/index.html
@@ -2506,6 +2506,17 @@
                 height: 50px;
             }
         }
+
+        ul {
+            list-style: disc;
+            padding-left: 20px;
+            margin-bottom: 1rem;
+            margin-top: 1rem;
+        }
+
+        li {
+            margin-bottom: 0.5rem;
+        }
     </style>
     
     <script type="application/ld+json">
@@ -2621,7 +2632,7 @@
         <nav class="main-sidebar--nav">
             <a href="#tienda" aria-label="Ir a la sección de tienda">Tienda</a>
             <a href="#resenas" aria-label="Ir a la sección de reseñas">Reseñas</a>
-            <a href="#somos" aria-label="Ir a la sección ¿Quiénes Somos?">¿Quiénes Somos?</a>
+            <a href="#somos" aria-label="Ir a la sección ¿Por qué elegir El Oso?">¿Por qué elegir El Oso?</a>
             <a href="#contacto" aria-label="Ir a la sección de contacto">Contacto</a>
         </nav>
     </aside>
@@ -2936,7 +2947,7 @@
             <div class="container">
                 <div class="home-section--left">
                     <div class="home-section--header">
-                        <h1>¿Quiénes Somos?</h1>
+                        <h1>¿Por qué elegir El Oso?</h1>
                     </div>
                     <div class="home-somos--content">
                         <div class="swiper mySwiper3">
@@ -2946,10 +2957,13 @@
                                         <div class="card-somos--left">
                                             <div class="card-somos--content">
                                                 <div>
-                                                    <p>¡Hola! Somos Cristian y Ezequiel, dos hermanos nacidos en Quilmes que arrancaron a hacer cerveza por pasión… y se nos fue de las manos (por suerte).</p>
-                                                    <p>Así nació El Oso: un proyecto cervecero donde mandan el sabor, la curiosidad y las ganas de hacer birra bien hecha. Elaboramos micro-lotes, con recetas propias, ingredientes naturales y métodos tradicionales. Nuestras cervezas son sin filtrar, sin conservantes y gasificadas de forma natural.</p>
-                                                    <p>No hacemos cerveza para que pase desapercibida. Hacemos cerveza para compartir, para la juntada, para el asado, para ese "¿abrimos otra?". Cada estilo tiene su personalidad, pero todas tienen algo en común: están hechas con dedicación y muchas ganas de que del otro lado alguien la disfrute.</p>
-                                                    <p>Si te gusta descubrir sabores, brindar seguido y apoyar lo hecho a pequeña escala, ya sos parte del mundo El Oso.</p>
+                                                    <p>Elegir nuestra cerveza es elegir un producto vivo, honesto y local. No somos una fábrica industrial; somos dos hermanos de Quilmes obsesionados con la calidad.</p>
+                                                    <ul>
+                                                        <li><strong>Real y Natural:</strong> Sin conservantes ni procesos químicos. Nuestras cervezas son sin filtrar y cuentan con carbonatación natural, logrando una textura y un aroma que las industriales no pueden copiar.</li>
+                                                        <li><strong>Recetas de Autor en Micro-Lotes:</strong> No producimos en masa. Cada tanda es un lote pequeño cuidado personalmente, asegurando que cada botella que abrís tenga la personalidad y el frescor de nuestra receta original.</li>
+                                                        <li><strong>De Nuestra Fábrica a tu Puerta (Gratis):</strong> Si estás en Quilmes, Bernal, Ezpeleta, Berazategui o Don Bosco, te llevamos la birra a tu casa sin cargo adicional los jueves y viernes.</li>
+                                                        <li><strong>Pasión por lo Artesanal:</strong> Apoyás un proyecto local que valora el método tradicional. Hacemos la cerveza que a nosotros nos gusta tomar: con cuerpo, alma y mucha dedicación.</li>
+                                                    </ul>
                                                 </div>
                                             </div>
                                         </div>
@@ -3043,7 +3057,7 @@
             <div class="main-footer--top">
                 <div class="columna"><a href="#tienda" aria-label="Ir a la sección de tienda">Tienda</a></div>
                 <div class="columna"><a href="#resenas" aria-label="Ir a la sección de reseñas">Reseñas</a></div>
-                <div class="columna"><a href="#somos" aria-label="Ir a la sección ¿Quiénes Somos?">¿Quiénes Somos?</a></div>
+                <div class="columna"><a href="#somos" aria-label="Ir a la sección ¿Por qué elegir El Oso?">¿Por qué elegir El Oso?</a></div>
                 <div class="columna"><a href="#contacto" aria-label="Ir a la sección de contacto">Contacto</a></div>
             </div>
             <div class="main-footer--bottom">
