--- a/index.html
+++ b/index.html
@@ -468,8 +468,7 @@
 
         .product-modal-subtitle {
             font-size: 1.1rem;
-            color: #666;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             font-style: italic;
         }
 
@@ -477,7 +476,7 @@
             font-size: 1.8rem;
             font-weight: bold;
             color: var(--color-black);
-            margin-bottom: 25px;
+            margin-bottom: 10px;
         }
 
         .product-modal-price b {
@@ -488,7 +487,7 @@
             font-size: 1rem;
             line-height: 1.7;
             color: #444;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
             padding-bottom: 20px;
             border-bottom: 1px solid #eee;
         }
@@ -1960,7 +1959,7 @@
             color: #555;
         }
         .exit-popup .cupon-destacado {
-            background: #f0f0f0;
+            background: #e8f5e9;
             padding: 15px;
             border-radius: 10px;
             margin-bottom: 25px;
@@ -1968,26 +1967,7 @@
             font-weight: bold;
             letter-spacing: 2px;
             color: #2e7d32;
-            border: 2px dashed #4CAF50;
         }
-        .exit-popup-btn {
-            background: var(--color-black);
-            color: #fff;
-            border: none;
-            padding: 15px 30px;
-            border-radius: 50px;
-            font-size: 1.2rem;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.3s;
-            width: 100%;
-            text-transform: uppercase;
-        }
-        .exit-popup-btn:hover {
-            background: #4CAF50;
-            transform: scale(1.05);
-        }
-
         @media (max-width: 1200px) {
             .home-section--header h1 {
                 font-size: 3rem;
@@ -3444,11 +3424,10 @@
         <div class="exit-popup-overlay" id="exitPopupOverlay"></div>
         <div class="exit-popup-content">
             <span class="exit-popup-close" id="exitPopupClose">&times;</span>
-            <h2>¡Esperá!</h2>
+            <h2>¡No te pierdas el descuento!</h2>
             <p>Llevate un <strong>10% de descuento</strong> en tu primer compra.</p>
             <div class="cupon-destacado">OSO10</div>
             <p>Usá el código <strong>OSO10</strong> al finalizar tu compra.</p>
-            <button class="exit-popup-btn" id="applyExitCouponBtn">APLICAR CUPÓN</button>
         </div>
     </div>
 
