Sacar automaticConfig de Meta

--- a/index.html
+++ b/index.html
@@ -2680,9 +2680,7 @@
         s.parentNode.insertBefore(t,s)}(window, document,'script',
         'https://connect.facebook.net/en_US/fbevents.js');
 
-        fbq('init', '1566148354629656', {
-            automaticConfig: true
-        });
+        fbq('init', '1566148354629656');
 
         fbq('track', 'PageView');
     </script>
